--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
-
 {
   "name": "myapp2",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://madheshstudent.github.io/myapp",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -17,6 +17,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
   "eslintConfig": {
